--- a/app/static/styles/cadastro.css
+++ b/app/static/styles/cadastro.css
@@ -22,6 +22,7 @@
 .content {
     flex-direction: column;
     margin-top: 30px;
+    margin-bottom: 40px;
     justify-content: center;
     align-items: center;
     padding-bottom: 50px;
