--- a/app/static/styles/vaga.css
+++ b/app/static/styles/vaga.css
@@ -50,7 +50,7 @@
 }
 
 .paginate {
-    margin: 20px 0;
+    margin: 20px 0px 150px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -123,4 +123,10 @@
     padding: 0px;
     margin: 4px 0px 0px 6px;
     width: 20px;
+}
+
+.my-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
